--- a/claseCalendario/index.html
+++ b/claseCalendario/index.html
@@ -25,11 +25,30 @@
         <input type="month" id="mes" name="mes" />
       </label>
       <input type="submit" />
-    </form> -->
+    </form>
     <form action="">
       <label for="calendario">
         <span>Calendario</span>
         <input type="datetime-local" name="calendario" id="calendario">
+      </label>
+      <input type="submit" />
+    </form> -->
+    <form action="">
+      <label for="nombre">
+        <span>¿Cuá es tu nombre?</span>
+        <input type="text" name="nombre" id="nombre" autocomplete="name" required />
+      </label>
+      <label for="correo">
+        <span>¿Cuál es tu correo?</span>
+        <input type="email" name="correo" id="correo" autocomplete="email" required />
+      </label>
+      <label for="pais">
+        <span>¿En qué país vives?</span>
+        <input type="text" name="pais" id="pais" autocomplete="country" required />
+      </label>
+      <label for="cp">
+        <span>¿Cuál es tu código postal?</span>
+        <input type="number" name="cp" id="cp" autocomplete="postal-code" required />
       </label>
       <input type="submit" />
     </form>
