--- a/html/claseButton/index.html
+++ b/html/claseButton/index.html
@@ -7,8 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <input type="submit">
+  <input type="submit" value="Nombre">
 
-  <button>Enviar</button>
+  <button type="submit">Enviar</button>
 </body>
 </html>
